--- a/src/Samples/Toolkit.SampleApp.Maui/Samples/SymbolEditorSample.xaml
+++ b/src/Samples/Toolkit.SampleApp.Maui/Samples/SymbolEditorSample.xaml
@@ -16,12 +16,12 @@
                          BindingContext="{Binding Symbol, Source={x:Reference symbolDisplay}}" 
                          x:DataType="sym:SimpleMarkerSymbol">
                 <Label Text="Size" />
-                <Slider Minimum="5" Maximum="100" Value="{Binding Size, Mode=TwoWay}" />
+                <Slider Maximum="100" Minimum="5" Value="{Binding Size, Mode=TwoWay}" />
                 <Label Text="Style" />
                 <Picker ItemsSource="{Binding SimpleMarkerSymbolStyles, Source={RelativeSource AncestorType={x:Type ContentPage}}}" 
                         SelectedItem="{Binding Style, Mode=TwoWay}"/>
                 <Label Text="Angle" />
-                <Slider Minimum="0" Maximum="360" Value="{Binding Angle, Mode=TwoWay}" />
+                <Slider Maximum="360" Minimum="0" Value="{Binding Angle, Mode=TwoWay}" />
             </StackLayout>
 
             <esri:SymbolDisplay x:Name="symbolDisplay" Grid.Row="1" Symbol="{Binding Symbol}" />
