--- a/src/Samples/Toolkit.SampleApp.WPF/Samples/Forms/FeatureFormViewSample.xaml
+++ b/src/Samples/Toolkit.SampleApp.WPF/Samples/Forms/FeatureFormViewSample.xaml
@@ -27,16 +27,26 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <esri:FeatureFormView x:Name="formViewer" Margin="5,5,5,0" VerticalScrollBarVisibility="Hidden" Grid.ColumnSpan="3" />
-                    <Border BorderThickness="0,1,0,0" BorderBrush="Black" Background="#eeeeee" Grid.Row="1" Grid.ColumnSpan="3" Padding="5">
+                    <Border BorderThickness="0,1,0,0" BorderBrush="Black" Grid.Row="1" Grid.ColumnSpan="3" Padding="5">
+                        <Border.Resources>
+                            <Style TargetType="Button">
+                                <Setter Property="Foreground" Value="White"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsEnabled" Value="False">
+                                        <Setter Property="Foreground" Value="Gray"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Resources>
                         <Grid>
-                            <Grid.ColumnDefinitions >
+                            <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
                                 <ColumnDefinition />
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <Button Content="Close" Background="#007AC2" Foreground="White" Padding="5" Click="CloseButton_Click" Grid.Column="0" />
-                            <Button Content="Reset" Margin="5,0" Background="#D83020" Foreground="White" Padding="5" Command="{Binding DiscardEditsCommand, ElementName=formViewer}" Grid.Column="1" />
-                            <Button Content="Apply" Background="#35AC46" Foreground="White" Padding="5" Command="{Binding FinishEditingCommand, ElementName=formViewer}" Grid.Column="2" />
+                            <Button Content="Close" Background="#007AC2" Padding="5" Click="CloseButton_Click" Grid.Column="0" />
+                            <Button Content="Reset" Margin="5,0" Background="#D83020" Padding="5" Command="{Binding DiscardEditsCommand, ElementName=formViewer}" Grid.Column="1" />
+                            <Button Content="Apply" Background="#35AC46" Padding="5" Command="{Binding FinishEditingCommand, ElementName=formViewer}" Grid.Column="2" />
                         </Grid>
                     </Border>
                 </Grid>
